# Aniso_MPM

./: .gitignore  CMakeLists.txt  README.md
Data/TetMesh/mesh_files/: data.txt  fibre_direction.csv  file_100.mesh  file_101.mesh  file_102.mesh  file_103.mesh  file_104.mesh  file_105.mesh  file_106.mesh  file_107.mesh  file_108.mesh  file_109.mesh  file_110.mesh  file_111.mesh  file_112.mesh  file_113.mesh  file_114.mesh  file_115.mesh  file_116.mesh  file_117.mesh  file_118.mesh  file_119.mesh  file_120.mesh  file_121.mesh  file_122.mesh  file_123.mesh  file_124.mesh  file_125.mesh  file_126.mesh  file_127.mesh  file_128.mesh  file_129.mesh  file_130.mesh  file_131.mesh  file_132.mesh  file_133.mesh  file_134.mesh  file_135.mesh  file_136.mesh  file_137.mesh  (+177 more)
Lib/SPGrid/Core/: SPGrid_Utilities.cpp
Projects/anisofracture/: AnisoFractureInit3D.h  AnisoFractureSimulation.h  CMakeLists.txt  README.md  all_mse.txt  cmaes_animation.py  gradient_descent.py  image_comparison.py  interest_closest_points.txt  mse.txt  new_solutions_mse.csv  optimizer_state.pkl  parameters.txt  solutions_mse.csv
Projects/anisofracture/calculate_mse/: computeMSE.cpp  main.cpp  readf_module.cpp  (+1 more)
Projects/cmaes/: README.md  cmaes_animation.py  data.txt  direction_fibres.py  image_comparison.py  mesh_creation.py  mse.txt  new_solutions_mse.csv  optimizer_state.pkl  parameters.txt  rescaled_data.txt  scale_values.txt  solutions_mse.csv  visibles.txt
Projects/cmaes/calculate_mse/: CMakeLists.txt  findClosestPoint.cpp  functions.h  last_file.cpp  main.cpp  main_image.cpp  scale_module.cpp
(+18 files in other folders)
